--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "axios": "^1.7.3",
     "cheerio": "^1.0.0-rc.12",
+    "postgres": "^3.4.4"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.4"
   }
 }
