--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.3",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "postgres": "^3.4.4"
   },
   "devDependencies": {
